# splitter

./: .gitattributes  .gitignore  CHANGELOG.md  CLI-REFERENCE.md  Cargo.toml  PROTOCOL.md  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
crates/audiomirror-cli/: Cargo.toml  Info.plist  build.rs
crates/audiomirror-cli/src/: main.rs
crates/audiomirror-cli/src/commands/: autostart.rs  daemon.rs  devices.rs  discover.rs  logs.rs  loop_cmd.rs  metrics.rs  mod.rs  recv.rs  send.rs  settings.rs  stream_repl.rs
crates/audiomirror-cli/tests/: help_snapshots.rs
crates/audiomirror-cli/tests/snapshots/: help_snapshots__help_daemon.snap  help_snapshots__help_devices.snap  help_snapshots__help_discover.snap  help_snapshots__help_loop.snap  help_snapshots__help_recv.snap  help_snapshots__help_root.snap  help_snapshots__help_send.snap  help_snapshots__help_stats.snap  help_snapshots__help_stream_open.snap
crates/audiomirror-core/: Cargo.toml  build.rs
crates/audiomirror-core/src/: error.rs  lib.rs  settings.rs
crates/audiomirror-core/src/audio/: capture.rs  codec.rs  devices.rs  mod.rs  playback.rs  ring.rs
crates/audiomirror-core/src/audio/loopback/: macos.rs
crates/audiomirror-core/src/net/: device_watcher.rs  discovery.rs  fec.rs  identity.rs  manager.rs  mod.rs  session.rs  stream.rs  stream_runtime.rs  trust.rs
crates/audiomirror-core/src/net/signaling/: client.rs  connection.rs  heartbeat.rs  message.rs  mod.rs  server.rs
crates/audiomirror-core/src/observability/: autostart.rs  logs.rs  metrics.rs  mod.rs
crates/audiomirror-core/tests/: loopback_two_daemons.rs  stream_data_plane.rs
crates/audiomirror-integration-tests/: Cargo.toml
crates/audiomirror-integration-tests/src/: lib.rs
crates/audiomirror-integration-tests/tests/: audio_rms_sustained.rs  end_to_end.rs  net_degradation.rs  soak.rs
crates/splitter-cli/: Cargo.toml  Info.plist  build.rs
crates/splitter-cli/src/: main.rs
crates/splitter-cli/src/commands/: audio_pipeline.rs  autostart.rs  daemon.rs  devices.rs  discover.rs  logs.rs  loop_cmd.rs  metrics.rs  mod.rs  recv.rs  send.rs  settings.rs  stream_repl.rs
crates/splitter-cli/src/commands/daemon/: context.rs  mod.rs  peer_event_loop.rs  reconnect.rs  repl.rs  ui.rs
crates/splitter-cli/tests/: help_snapshots.rs
crates/splitter-cli/tests/snapshots/: help_snapshots__help_daemon.snap  help_snapshots__help_devices.snap  help_snapshots__help_discover.snap  help_snapshots__help_loop.snap  help_snapshots__help_recv.snap  help_snapshots__help_root.snap  help_snapshots__help_send.snap  help_snapshots__help_stats.snap  help_snapshots__help_stream_open.snap
crates/splitter-core/: Cargo.toml  build.rs
crates/splitter-core/src/: config.rs  error.rs  lib.rs  settings.rs
crates/splitter-core/src/audio/: buffers.rs  capture.rs  codec.rs  devices.rs  loopback.rs  playback.rs  priority.rs  resampler.rs  test_fixtures.rs
crates/splitter-core/src/audio/loopback/: macos.rs
crates/splitter-core/src/net/: active_scan.rs  device_watcher.rs  discovery.rs  fs_util.rs  identity.rs  jitter.rs  manager.rs  mod.rs  packet.rs  session.rs  stream.rs  stream_pump.rs  stream_registry.rs  stream_runtime.rs  stream_stats.rs  trust.rs
crates/splitter-core/src/net/signaling/: client.rs  client_ops.rs  connection.rs  control_plane.rs  heartbeat.rs  message.rs  mod.rs  reconnect.rs  server.rs  supervisor.rs
crates/splitter-core/src/observability/: autostart.rs  logs.rs  metrics.rs  mod.rs
crates/splitter-core/tests/: loopback_two_daemons.rs  stream_data_plane.rs
crates/splitter-integration-tests/: Cargo.toml  build.rs
crates/splitter-integration-tests/src/: lib.rs
crates/splitter-integration-tests/tests/: audio_rms_sustained.rs  end_to_end.rs  net_degradation.rs  soak.rs
docs/: RELEASING.md
landing/: index.html
mockups/: 01-glassmorphism.html  02-bento.html  03-claymorphism.html  04-brutalism.html  05-neumorphism.html  06-editorial.html  07-skeuomorphism.html  08-cyberpunk.html  09-tactile.html  10-terminal.html  index.html
plans/: 001-frontend-ci-and-cargo-audit.md  002-docs-spec-and-readme-fixes.md  003-cli-daemon-broadcast-lag-hang.md  004-hotplug-dispatcher-lock-across-await.md  005-dedup-notify-remote-conn-lookup.md  006-udp-hotpath-per-packet-alloc.md  007-rt-callback-allocations.md  008-jitterbuffer-on-scan-and-cap.md  009-channelstrip-controlled-mute-volume.md  010-use-active-session-hook.md  011-remove-redundant-polling.md  012-settings-dialog-double-debounce.md  013-token-file-permissions.md  014-server-minted-auth-token.md  015-evict-registries-on-disconnect.md  016-wire-jitterbuffer-and-fec-into-session-path.md  017-split-stream-runtime-god-module.md  018-characterization-tests-command-and-acceptor.md  019-characterization-tests-daemon-orchestration.md  020-unify-cli-tauri-control-plane.md  README.md
scripts/: gen_icon.py  run-daemon.bat  run-daemon.sh
src/: bindings.ts  index.css  main.ts  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/tray/: active.rgba  degraded.rgba  error.rgba  idle.rgba
src-tauri/src/: acceptor.rs  core.rs  dto.rs  events.rs  lib.rs  main.rs  reconnect.rs  tray.rs
src-tauri/src/commands/: devices.rs  mod.rs  ops.rs  peers.rs  perms.rs  settings.rs  streams.rs  system.rs
src/__mocks__/: tauri-core.ts  tauri-event.ts  tauri-webview.ts
src/app/: App.settings.test.tsx  App.tsx  queryClient.ts
src/components/: Sparkline.test.tsx  Sparkline.tsx
src/components/ui/: alert.tsx  button.tsx  (+13 more)
src/hooks/: hooks.test.tsx  useActiveSession.test.tsx  useActiveSession.ts  useConnection.ts  useDeviceName.ts  useDevices.ts  useIdentity.ts  usePeers.ts  usePermissions.ts  useSettings.ts  useSnapshot.ts  useStreams.ts  useUpdater.ts
src/lib/: api.test.ts  api.ts  deviceName.test.ts  deviceName.ts  events.ts  motion.test.ts  motion.ts
src/stores/: theme.test.ts  theme.ts  ui.test.ts  ui.ts
src/test/: setup.ts
(+40 files in other folders)
