[workspace]
resolver = "2"
members = [
    "crates/splitter-core",
    "crates/splitter-cli",
    "crates/splitter-integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Pedro Segato <pedrosegato4@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util", "fs", "signal", "process"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
cpal = "0.15"
audiopus = "0.3.0-rc.0"
rubato = "0.15"
ringbuf = "0.4"
audio_thread_priority = "0.34"
socket2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
dirs = "5"
clap = { version = "4", features = ["derive"] }
mdns-sd = "0.11"
toml = "0.8"
base64 = "0.22"
rand = "0.8"
gethostname = "0.5"
tracing-appender = "0.2"
prometheus = { version = "0.13", default-features = false, features = ["process"] }
assert_cmd = "2"
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"
unimplemented = "warn"
