[package]
name = "splitter-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "splitter_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
splitter-core = { path = "../crates/splitter-core", features = ["specta"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.22"
specta-typescript = "=0.0.9"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-autostart = "2.5.1"

[dev-dependencies]
tempfile = { workspace = true }
