[package]
name = "audiomirror-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
audiomirror-core = { path = "../audiomirror-core" }
tokio = { workspace = true, features = ["io-std"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
socket2 = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
