[package]
name = "splitter-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
cpal = { workspace = true }
audiopus = { workspace = true }
rubato = { workspace = true }
ringbuf = { workspace = true }
audio_thread_priority = { workspace = true }
socket2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
mdns-sd = { workspace = true }
toml = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
gethostname = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
futures = "0.3"
crossbeam-queue = "0.3"
specta = { version = "=2.0.0-rc.22", optional = true }

[features]
specta = ["dep:specta"]

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5"

[dev-dependencies]
proptest = "1"
tempfile = { workspace = true }

[lints]
workspace = true
